# xenwooting

./: .gitignore  ImpDetails.md  InstallRGB.md  README.md  list-wootings.sh  monitor_wooting_midi.py  panic.sh  power_watch.sh  rgb_power_test.sh  step_coords.py  wooting_rgb.py
contrib/: install-systemd.sh
src/: config.rs  hidmap.rs  lib.rs  mts.rs  rgb.rs  rgb_worker.rs
tools/: parse_xenwooting_dumps.py
webconfigurator/: .gitignore
webconfigurator/contrib/systemd/: wtn-editor.service
webconfigurator/server/: chords.js  geometry.js  isomorphic.js  package-lock.json  package.json  server.js  wtn.js
webconfigurator/server/data/scala/: chordnam.par
webconfigurator/web/: index.html  package-lock.json  package.json  vite.config.ts
webconfigurator/web/src/: App.css  App.tsx  BoardsPage.css  BoardsPage.tsx  DumpsPage.css  DumpsPage.tsx  GuidePage.css  GuidePage.tsx  KeyboardView.tsx  LivePage.css  LivePage.tsx  api.ts  dumpsWorker.ts  index.css  ltn.ts  main.tsx  types.ts
webconfigurator/web/src/hexgrid/: boardGrids.ts  project.ts
webconfigurator/web/src/ltn/: parse.ts
wtn/: edo12.wtn  edo24.wtn  edo31.wtn
xenharm_service/: README.md  server.py  xenharm.service
xenwooting/: Cargo.toml  README.md
xenwooting/contrib/: install-systemd.sh
xenwooting/contrib/systemd/: xenwooting.service
xenwooting/contrib/tmpfiles.d/: xenwooting.conf
xenwooting/src/: config.rs  hidmap.rs  wtn.rs
xenwooting/wtn/: edo12.wtn  edo19.wtn  edo24.wtn  edo29.wtn  edo31.wtn  edo53.wtn
